[project]
name = "ytm-purge"
version = "0.1.0"
description = "Artist-level purge of a YouTube Music library via hand-marked CSV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ytmusicapi>=1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
